--- a/addContact.html
+++ b/addContact.html
@@ -53,10 +53,10 @@ function checkContact()
   }
 }
 
-// TODO: This function should return the user to the main page once that exists.
+// Return the user to the main page when they click Cancel.
 function goBack()
 {
-  alert("TODO: Should set document.location.href to the main page.");
+  location.href = "index.htm";
 }
 </script>
 
