--- a/index.htm
+++ b/index.htm
@@ -49,10 +49,10 @@ function makeContactFloats(name, mainKey)
   return floatedContact;
 }
 
-// TODO: This function should send the user to the Add Contact page.
+// Send the user to the Add Contact page when the click the Add Contact button.
 function goToAdd()
 {
-  alert("TODO: Should set document.location.href to the add contact page.");
+  location.href = "addContact.html";
 }
 
 // TODO: This function needs to redirect to the Update Contact page.
