Added page links
Now all the links between the pages should work; this is basically a full demo without the API or backend.

--- a/Login.html
+++ b/Login.html
@@ -25,7 +25,7 @@ function logInUser()
   if (login == "test" && password == "password")
   {
     // TODO: Set up and create the cookie.
-    alert("TODO: Should go to main page.");
+    location.href = "index.htm";
     return;
   }
   // Tell the user if the login failed.
@@ -35,7 +35,7 @@ function logInUser()
 // Go to the Register screen when the user clicks on the Register button.
 function goToRegister()
 {
-  alert("TODO: Go to register screen.");
+  location.href = "Register.html";
 }
         </script>
 
