--- a/index.htm
+++ b/index.htm
@@ -58,8 +58,7 @@ function goToAdd()
 // TODO: This function needs to redirect to the Update Contact page.
 function updateContact(entryKey)
 {
-  alert("TODO: Bring the user to the Update page to update the entry with key " + entryKey + 
-  ".\nNot sure how to remember the key; maybe stick it in the cookie?");
+  alert("TODO: Bring up a modal dialog box to update the entry with key " + entryKey + ".");
 }
 
 // TODO: Remove a contact after warning the user.
@@ -67,14 +66,15 @@ function deleteContact(entryKey)
 {
   if(confirm("Do you want to delete this contact?"))
   {
-    alert("TODO: Tell the database to delete the entry with key " + entryKey + ", and then redo the search.");
+    alert("TODO: Tell the database to delete the entry with key " + entryKey + ", and update the data retrieved.");
   }
 }
 
 //TODO: Return the user to the login page and clear their cookie.
 function logOut()
 {
-  alert("TODO: Return the user to the login page and clear their cookie.");
+  alert("TODO: Clear the user's cookie.");
+  location.href = "Login.html";
 }
 
 </script>
