--- a/Register.html
+++ b/Register.html
@@ -39,13 +39,13 @@ function registerUser()
   var jsonPayload = '{"login" : "' + login + '", "password" : "' + password + '"}';
   alert("TODO: Should submit to Register API and make cookie:\n" + jsonPayload);
   // TODO: Database query to add the new user, and make the cookie.
-  location.href = "index.htm";
+  location.href = "mainPage.htm";
 }
 
 // Go to the Register screen when the user clicks on the Register button.
 function goToLogin()
 {
-  location.href = "Login.html";
+  location.href = "index.html";
 }
         </script>
 
