--- a/addContact.html
+++ b/addContact.html
@@ -56,7 +56,7 @@ function checkContact()
 // Return the user to the main page when they click Cancel.
 function goBack()
 {
-  location.href = "index.htm";
+  location.href = "mainPage.htm";
 }
 </script>
 
