--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ function logInUser()
   if (login == "test" && password == "password")
   {
     // TODO: Set up and create the cookie.
-    location.href = "index.htm";
+    location.href = "mainPage.htm";
     return;
   }
   // Tell the user if the login failed.
