--- a/mainPage.htm
+++ b/mainPage.htm
@@ -74,7 +74,7 @@ function deleteContact(entryKey)
 function logOut()
 {
   alert("TODO: Clear the user's cookie.");
-  location.href = "Login.html";
+  location.href = "index.html";
 }
 
 </script>
