main page updated and ready
I edited how the page handles the search results so that the modal box for updating contacts will be easier to make.

--- a/mainPage.htm
+++ b/mainPage.htm
@@ -22,16 +22,16 @@ function searchContacts()
   alert("TODO: Should submit to search:\n" + jsonPayload);
   
   // This test data can substitute for the request output.
-  // It's rendered as an array of objects, each with a field for the formatted contact data, and another for the primary key.
-  var dummyContacts = [{entry:"William Tell", index:10}, 
-		       {entry:"Tommy Tutone, 8675309", index:15}, 
-		       {entry:"Professor Nelson, hnelson@uni.edu", index:45}, 
-		       {entry:"Jane Smith, 555-5555, jsmith@yahoo.com", index:46}];
+  // It's rendered as an array of objects, each with fields for the contact data, and another for the primary key.
+  var dummyContacts = [{first:"William", last:"Tell", phone:"", email:"", primKey:10}, 
+		       {first:"Tommy", last:"Tutone", phone:"8675309", email:"", primKey:15}, 
+		       {first:"Professor", last:"Nelson", phone:"", email:"hnelson@uni.edu", primKey:45}, 
+		       {first:"Jane", last:"Smith", phone:"5555555", email:"jsmith@yahoo.com", primKey:46}];
 
   // For each entry, I show a contact with the text on the left, and Update and Remove buttons on the right.
   for (var i = 0; i < dummyContacts.length; i++)
   {
-    result.innerHTML += makeContactFloats(dummyContacts[i].entry, dummyContacts[i].index);
+    result.innerHTML += makeContactFloats(dummyContacts[i], i);
   }
   // If no results were found, say so.
   if (dummyContacts.length == 0)
@@ -41,12 +41,34 @@ function searchContacts()
 }
 
 // This function generates a piece of text and two buttons in HTML to add to the display.
-function makeContactFloats(name, mainKey)
+function makeContactFloats(entry, index)
 {
-  var floatedContact = '<div><p>' + name + 
+  // First make the contact information.
+  var contactInfo = entry.first + " " + entry.last;
+  if (entry.phone != "")
+  {
+    contactInfo += ", " + entry.phone;
+  }
+
+  if (entry.email != "")
+  {
+    contactInfo += ", " + entry.email;
+  }
+
+  // Next make the parameter listss for the two onClick functions. Both of them need the primary key (to know what database entry to act on)
+  // and the display index (so that it can update the displayed data without re-fetching), but the Update one also needs the 
+  // full data of the entry (to display it as the default data).
+  var deleteParams = entry.primKey + ", " + index;
+  var updateParams = "'" + entry.first + "', '" + entry.last + "', '" + entry.phone + "', '" + entry.email + "', " + deleteParams;
+
+  // Then we need to give a name to the div to reference it later.
+  var divName = "entryDiv" + index;
+
+  // Now plug all these into the HTML.
+  var fullContact = '<div id="' + divName + '"><p>' + contactInfo + 
 			'</p><span class="fullWidth"><input type=button value="Delete" class="smallButton" onClick="deleteContact(' + 
-			mainKey + ');"><input type=button value="Edit" class="smallButton" onClick="updateContact(' + mainKey + ');"></span>';
-  return floatedContact;
+			deleteParams + ');"><input type=button value="Edit" class="smallButton" onClick="updateContact(' + updateParams + ');"></span></div>';
+  return fullContact;
 }
 
 // Send the user to the Add Contact page when the click the Add Contact button.
@@ -55,18 +77,22 @@ function goToAdd()
   location.href = "addContact.html";
 }
 
-// TODO: This function needs to redirect to the Update Contact page.
-function updateContact(entryKey)
+// TODO: This function needs a modal box and database access.
+function updateContact(first, last, phone, email, primKey, index)
 {
-  alert("TODO: Bring up a modal dialog box to update the entry with key " + entryKey + ".");
+  alert("TODO: Bring up a modal dialog box with default values '" + first + "', '" + last + "', '" + phone + "', '" + email + 
+		"' to update the database entry with key " + primKey + ", and update the div indexed " + index + ".");
 }
 
 // TODO: Remove a contact after warning the user.
-function deleteContact(entryKey)
+function deleteContact(entryKey, entryInd)
 {
   if(confirm("Do you want to delete this contact?"))
   {
-    alert("TODO: Tell the database to delete the entry with key " + entryKey + ", and update the data retrieved.");
+    alert("TODO: Tell the database to delete the entry with key " + entryKey + ".");
+
+    // Remove the entry referred to by setting its display to none.
+    document.getElementById("entryDiv" + entryInd).style.display = "none";
   }
 }
 
