--- a/Register.html
+++ b/Register.html
@@ -49,29 +49,8 @@ function goToLogin()
 }
         </script>
 
+<link href="css/styles.css" rel="stylesheet">
     <style>
-body 
-{
-    background-color: #89cff0;
-}
-
-#title 
-{
-    font-size: 40px;
-    width: 100%;
-    text-align: center;
-    font-family: 'Ubuntu', sans-serif;
-    color: #FFFFFF;
-}
-
-#registerDiv
-{
-    font-size: 30px;
-    width: 70%;
-    margin-left: 15%;
-    padding: 25px;
-    background-color: #b2b2b2;
-}
 
 .buttons
 {
@@ -142,7 +121,7 @@ select{
 
 <h1 id="title">Login Page Demo</h1>
 
-<div id="registerDiv">
+<div id="mainDiv">
 	<span id="inner-title">REGISTRY PAGE</span>
 	<input type="text" id="registerName" placeholder="Username" /><br />
 	<input type="password" id="registerPassword" placeholder="Password"/><br />
