--- a/addContact.html
+++ b/addContact.html
@@ -60,29 +60,8 @@ function goBack()
 }
 </script>
 
+<link href="css/styles.css" rel="stylesheet">
 <style>
-body 
-{
-    background-color: #89cff0;
-}
-
-#title 
-{
-    font-size: 40px;
-    width: 100%;
-    text-align: center;
-    font-family: 'Ubuntu', sans-serif;
-    color: #FFFFFF;
-}
-
-#contactDiv
-{
-    font-size: 30px;
-    width: 70%;
-    margin-left: 15%;
-    padding: 25px;
-    background-color: #b2b2b2;
-}
 
 .buttons
 {
@@ -178,7 +157,7 @@ select{
 
 <h1 id="title">Add Contact</h1>
 
-<div id="contactDiv">
+<div id="mainDiv">
 	<span id="inner-title">To add a new contact, please give the first and last name; <br>email and phone are optional.<br></span>
 	<input type="text" id="firstName" placeholder="First name" /><br />
         <input type="text" id="lastName" placeholder="Last name" /><br />
