--- a/index.html
+++ b/index.html
@@ -39,30 +39,8 @@ function goToRegister()
 }
         </script>
 
+<link href="css/styles.css" rel="stylesheet">
     <style>
-body 
-{
-    background-color: #89cff0;
-}
-
-#title 
-{
-    font-size: 40px;
-    width: 100%;
-    text-align: center;
-    font-family: 'Ubuntu', sans-serif;
-    color: #FFFFFF;
-}
-
-#loginDiv
-{
-    font-size: 30px;
-    width: 70%;
-    margin-left: 15%;
-    padding: 25px;
-    background-color: #b2b2b2;
-    border-radius: 25px;
-}
 
 .buttons
 {
@@ -145,7 +123,7 @@ select{
 
 <h1 id="title">Login Page Demo</h1>
 
-<div id="loginDiv">
+<div id="mainDiv">
 	<span id="inner-title">PLEASE LOG IN</span>
 	<input type="text" id="loginName" placeholder="Username" /><br />
 	<input type="password" id="loginPassword" placeholder="Password"/><br />
