--- a/mainPage.htm
+++ b/mainPage.htm
@@ -105,29 +105,8 @@ function logOut()
 
 </script>
 
+<link href="css/styles.css" rel="stylesheet">
 <style>
-body 
-{
-    background-color: #89cff0;
-}
-
-#title 
-{
-    font-size: 40px;
-    width: 100%;
-    text-align: center;
-    font-family: 'Ubuntu', sans-serif;
-    color: #FFFFFF;
-}
-
-#mainDiv
-{
-    font-size: 30px;
-    width: 70%;
-    margin-left: 15%;
-    padding: 25px;
-    background-color: #b2b2b2;
-}
 
 .buttons
 {
