--- a/index.html
+++ b/index.html
@@ -42,50 +42,6 @@ function goToRegister()
 <link href="css/styles.css" rel="stylesheet">
     <style>
 
-.buttons
-{
-    font-size: 30px;
-    border-radius: 25px;
-    width: 50%;
-    margin-left: 25%;
-    font-family: 'Ubuntu', sans-serif;
-}
-
-.buttons:hover{
-    background-color: #00d5124f;
-    color: #FFFFFF;
-    opacity: 50%;
-}
-
-#loginName
-{
-	font-size: 30px;
-}
-#loginPassword
-{
-	font-size: 30px;
-}
-
-input[type="text"],input[type="password"]{
-    border-radius: 25px;
-    text-align: center;
-    width: 80%;
-    margin-left: 10%;
-    margin-bottom: 2%;
-    font-family: 'Ubuntu', sans-serif;
-}
-
-#inner-title{
-    display: inline-block;
-    font-size: 0.8em;
-    width: 90%;
-    text-align: center;
-    margin-left: 5%;
-    margin-bottom: 2%;
-    font-family: 'Ubuntu', sans-serif;
-    color: #95060a;
-}
-
 #loginResult{
     display: inline-block;
     font-size: 0.8em;
@@ -125,8 +81,8 @@ select{
 
 <div id="mainDiv">
 	<span id="inner-title">PLEASE LOG IN</span>
-	<input type="text" id="loginName" placeholder="Username" /><br />
-	<input type="password" id="loginPassword" placeholder="Password"/><br />
+	<input type="text" id="loginName" class="bigInput" placeholder="Username" /><br />
+	<input type="password" id="loginPassword" class="bigInput" placeholder="Password"/><br />
 	<input type="button" id="loginButton" class="buttons" value="Login" onclick="logInUser();">
 	<span id="loginResult"></span>
         <br><br>
