--- a/mainPage.htm
+++ b/mainPage.htm
@@ -108,50 +108,6 @@ function logOut()
 <link href="css/styles.css" rel="stylesheet">
 <style>
 
-.buttons
-{
-    font-size: 30px;
-    border-radius: 25px;
-    width: 50%;
-    margin-left: 25%;
-    margin-top: 2%;
-    margin-bottom: 2%;
-    font-family: 'Ubuntu', sans-serif;
-}
-
-.buttons:hover{
-    background-color: #00d5124f;
-    color: #FFFFFF;
-    opacity: 50%;
-}
-
-.searchBox
-{
-        border-radius: 25px;
-	font-size: 20px;
-        width: 22%;
-        margin-left: 1%;
-        margin-right: 1%;
-        font-family: 'Ubuntu', sans-serif;
-}
-
-.fullWidth
-{
-        display: inline-block;
-        width: 100%;
-}
-
-#inner-title{
-    display: inline-block;
-    font-size: 0.8em;
-    width: 90%;
-    text-align: center;
-    margin-left: 5%;
-    margin-bottom: 2%;
-    font-family: 'Ubuntu', sans-serif;
-    color: #95060a;
-}
-
 #searchResult{
     display: inline-block;
     font-size: 0.8em;
@@ -217,9 +173,9 @@ select{
           <input type="text" id="phoneSearch" class="searchBox" placeholder="Phone number">
           <input type="text" id="emailSearch" class="searchBox" placeholder="Email address">
         </span>
-	<input type="button" id="checkButton" class="buttons" value="Search" onClick="searchContacts();">
+	<input type="button" id="checkButton" class="buttons spaced" value="Search" onClick="searchContacts();">
         <span id="searchResult"></span>
-        <input type="button" id="backButton" class="buttons" value="Add new contact" onClick="goToAdd();">
+        <input type="button" id="backButton" class="buttons spaced" value="Add new contact" onClick="goToAdd();">
         <span class="fullWidth">
             <input type="button" class="logoutButton" value="Log out" onClick="logOut();">
         <span>
