css consolidation final
Simplified a lot of the data in the CSS; the frontend framework is mostly complete. It just needs the cookie and database stuff, and figuring out how to do that modal window for the contact updating.

--- a/Register.html
+++ b/Register.html
@@ -58,12 +58,12 @@ function goToLogin()
 
 <div id="mainDiv">
 	<span id="inner-title">REGISTRY PAGE</span>
-	<input type="text" id="registerName" class="bigInput" placeholder="Username" /><br />
-	<input type="password" id="registerPassword" class="bigInput" placeholder="Password"/><br />
+	<input type="text" id="registerName" placeholder="Username" /><br />
+	<input type="password" id="registerPassword" placeholder="Password"/><br />
 	<input type="button" id="registerButton" class="buttons" value="Register" onclick="registerUser();">
 	<span id="registerResult" class="results errorText"></span>
         <br><br>
-        <input type="button" id="toLoginButton" class="buttons" value="Go to Login" onClick="goToLogin();">
+        <input type="button" id="toLoginButton" class="buttons" value="Back" onClick="goToLogin();">
 </div>
 
 </body>
