--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@ function goToRegister()
 
 <div id="mainDiv">
 	<span id="inner-title">PLEASE LOG IN</span>
-	<input type="text" id="loginName" class="bigInput" placeholder="Username" /><br />
-	<input type="password" id="loginPassword" class="bigInput" placeholder="Password"/><br />
+	<input type="text" id="loginName" placeholder="Username" /><br />
+	<input type="password" id="loginPassword" placeholder="Password"/><br />
 	<input type="button" id="loginButton" class="buttons" value="Login" onclick="logInUser();">
 	<span id="loginResult" class="results errorText"></span>
         <br><br>
