--- a/mainPage.htm
+++ b/mainPage.htm
@@ -125,7 +125,7 @@ function logOut()
         <span id="searchResult" class="results"></span>
         <input type="button" id="backButton" class="buttons spaced" value="Add new contact" onClick="goToAdd();">
         <span class="fullWidth">
-            <input type="button" id="logoutButton" value="Log out" onClick="logOut();">
+            <input type="button" class="buttons" id="logoutButton" value="Log out" onClick="logOut();">
         <span>
 </div>
 
