--- a/addContact.html
+++ b/addContact.html
@@ -1,68 +1,11 @@
 <html>
 <head>
-	<title>Small Project New Contact Demo</title>
+  <title>Small Project New Contact Demo</title>
 
-<script type="text/javascript">
-function checkContact()
-{
-  // Get the data the user entered.
-  var first = document.getElementById("firstName").value;
-  var last = document.getElementById("lastName").value;
-  var phone = document.getElementById("phoneNumber").value;
-  var email = document.getElementById("emailAddress").value;
+  <script type="text/javascript" src="js/code.js"></script>
+  <link href="css/styles.css" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
 
-  var result = document.getElementById("addResult");
-  result.innerHTML = ""; // Clear the login result field.
-  
-
-  // Check for invalid data: either missing names, invalid phone, or invalid email.
-  // Since the email and phone are optional, don't check them if empty.
-  if (first == "" || last == "")
-  {
-    result.innerHTML += "Please fill in first and last name. <br>";
-  }
-
-  var phoneRegex = /^\d{7}$|^\d{10}$/; //Matches a string of 7 or 10 digits. 
-  if (phone != "" && !phoneRegex.test(phone))
-  {
-    result.innerHTML += "Phone number must be either 7 or 10 digits (no dashes). <br>";
-  }
-  
-  // Check for a valid email (foo@bar.baz) via regex.
-  var emailRegex = /.+\@.+\..+/; 
-  if (email != "" && !emailRegex.test(email))
-  {
-    result.innerHTML += "Email must be of the form name@site.foo. <br>";
-  }
-
-  //TODO: Also check if the entry is duplicate?
-
-  // If we got no errors, then we can submit the data.
-  if (result.innerHTML == "")
-  {
-    // First clear the textboxes.
-    document.getElementById("firstName").value = "";
-    document.getElementById("lastName").value = "";
-    document.getElementById("phoneNumber").value = "";
-    document.getElementById("emailAddress").value = "";
-
-    // TODO: This is where we would submit the request to the server.
-    result.innerHTML = "New contact added."
-    var jsonPayload = '{"first" : "' + first + '", "last" : "' + last + '", "phone" : "' + phone + '", "email" : "' + email + '", "userID" : "' + '1' + '"}';
-    alert("TODO: Should submit:\n" + jsonPayload);
-  }
-}
-
-// Return the user to the main page when they click Cancel.
-function goBack()
-{
-  location.href = "mainPage.htm";
-}
-</script>
-
-<link href="css/styles.css" rel="stylesheet">
-
-    <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
 </head>
 <body>
 
